# TrackingDetectionCV

./: CMakeLists.txt  augmentdata.py  object_classification.cpp  object_detection.cpp  trainedRFTask3.yml  trainingDT.yml
